# AML_Glaucoma

./: .gitignore  README.md  config.py  config_files_setup_instruction.md  data_cleaner.py  data_loader.py  evaluator.py  model.py  preprocessor.py  pyproject.toml  requirements.txt  run_pipeline.py  test_script.py  trainer.py  utils.py  validation_report.json
conf/: config.yaml
conf/data/: default.yaml
conf/evaluation/: default.yaml
conf/logging/: default.yaml
conf/preprocessing/: default.yaml
conf/training/: default.yaml
docs/: config_schema.json  config_schema.md  example_config.yaml
model/: unet.yaml
output/: notebook.md
output/run_20250402_185906/: config.yaml
output/run_20250402_190619/: config.yaml
output/run_20250402_191004/: train_data.csv  val_data.csv
output/run_20250402_191217/: config.yaml
output/run_20250402_192420/: config.yaml  test_data.csv
output/run_20250402_193418/: consolidated_data.csv
output/run_20250402_195142/: cleaned_data.csv  config.yaml
output/run_20250402_200328/: cleaned_data.csv  train_data.csv
output/run_20250402_201136/: consolidated_data.csv  test_data.csv  val_data.csv
output/run_20250402_201519/: cleaned_data.csv  consolidated_data.csv  test_data.csv  train_data.csv  val_data.csv
output/run_20250402_202305/: config.yaml
output/run_20250402_202839/: val_data.csv
output/run_20250403_094729/: consolidated_data.csv  train_data.csv
output/run_20250403_100421/: cleaned_data.csv
output_test/: cleaned_glaucoma_dataset.csv  consolidated_glaucoma_dataset.csv  test_dataset.csv  train_dataset.csv  val_dataset.csv
(+63 files in other folders)
