[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glaucoma_detection"
version = "0.1.0"
description = "A modular machine learning pipeline for glaucoma detection"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}  # Use text instead of file
requires-python = ">=3.7"

dependencies = [
    "numpy>=1.19.5",
    "pandas>=1.3.0",
    "scikit-learn>=0.24.2",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pytorch-lightning>=2.0.0",
    "albumentations>=1.3.0",
    "segmentation-models-pytorch>=0.3.0",
    "hydra-core>=1.3.0",
    "typer>=0.9.0",
    "opencv-python>=4.5.3",
    "pillow>=8.2.0",
    "wandb>=0.15.0",
    "tqdm>=4.61.2",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "pytest",
    "pytest-cov",
    "mypy",
]

[project.scripts]
glaucoma-pipeline = "glaucoma_detection.run_pipeline:app"

[tool.black]
line-length = 100
target-version = ["py37"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.setuptools]
packages = ["data_loader", "data_cleaner", "preprocessor", "model", "trainer", "evaluator", "utils"]